# jaXiv

./: .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  cloudbuild-base.yaml  cloudbuild.yaml  docker-compose.yml  latex_translation_refactoring_report.md  latex_translation_solution_report.md  mypy.ini  render.yaml  skills-lock.json
backend/: .dockerignore  .env.template  .gitignore  .justfile  Dockerfile  Dockerfile.base  Dockerfile.render  Justfile  README-BASE-IMAGE.md  README.md  alembic.ini  main.py  openapi.json  pyproject.toml  test_arxiv_fetcher.py  test_cloud_translation.py
backend/alembic/: env.py
backend/alembic/versions/: 265bdba59a02_fix_datetime_timezone.py  3b1e9f4d2a7c_enable_rls_for_chat_thread.py  61c449449d0d_enable_rls.py  653ef8c5d274_add_chat_thread_table.py  91c1b44c9807_add_metadata_to_blog_table.py  a1b2c3d4e5f6_add_auth_fields_to_blog_table.py  a60fa4275e25_create_arxiv_table.py  b3c4d5e6f7a8_add_chat_thread_table.py  c2d4a7e9b1f3_migrate_chat_messages_to_content_blocks.py  c7f2a9d4b8e1_enable_rls_for_alembic_version.py  d9e2f1a3b4c5_add_user_subscription.py  ec4cf5023ae7_add_araxiv_tables.py  ec4cf5023ae7_add_arxiv_tables.py  f8754dbb89e2_add_chat_thread.py
backend/application/: chat_events.py
backend/application/unit_of_works/: __init__.py  _base.py  blog_post_unit_of_work.py  chat_thread_unit_of_work.py  translated_arxiv_unit_of_work.py
backend/application/usecase/: __init__.py  arxiv_redirector_sse.py  chat_with_paper.py  delete_chat_thread.py  generate_blog_post.py  generate_blog_post_from_pdf.py  generate_blog_post_from_pdf_sse.py  generate_blog_post_sse.py  get_chat_thread.py  get_my_chat_daily_count.py  get_my_generation_count.py  get_my_subscription.py  handle_stripe_webhook.py  list_blog_posts.py  list_chat_threads.py  list_my_blog_posts.py  manage_subscription.py  rag_search_image.py  rag_search_text.py  save_translated_arxiv.py  save_translated_arxiv_sse.py  start_checkout.py  start_customer_portal.py  suggest_figures.py  translate_arxiv_paper.py
backend/controller/: __init__.py  billing.py  blog.py  chat.py  figure_suggestion.py  translate.py
backend/controller/event_streamer/: __init__.py  event_streamer.py  models.py
backend/controller/schemas/: blog_response.py  chat.py  chat_thread.py  figure_suggestion_response.py  pdf_blog_response.py  rag_response.py  translate_response.py
backend/dependency_injector/: __init__.py
backend/domain/entities/: __init__.py  arxiv.py  auth_user.py  blog.py  blog_stream.py  chat.py  compile_error.py  compile_setting.py  document_chunk.py  extracted_figure.py  figure.py  latex_file.py  pdf_paper.py  stream.py  target_language.py  text_chunk.py  user_subscription.py
backend/domain/errors/: __init__.py  _base.py  domain_error.py
backend/domain/gateways/: __init__.py  i_arxiv_source_fetcher.py  i_billing_gateway.py  (+13 more)
backend/infrastructure/: arxiv_source_fetcher.py  dependencies.py  gemini_latex_translator.py  latex_compiler.py
backend/libs/: __init__.py  async_client.py
backend/middlewares/: exception_handler.py
backend/scripts/: download_models.py  eval_figure_search.py  figure_search_eval.example.json  generate_openapi.py
backend/usecase/: __init__.py  arxiv_redirecter.py  arxiv_redirector.py  generate_blog_post.py  generate_blog_post_from_pdf.py  get_blog_post.py  modify_and_compile.py  save_translated_arxiv.py  translate_arxiv_paper.py  translate_latex_project.py
backend/utils/: __init__.py  latex_parser.py  latex_project_analyzer.py  latex_translator_base.py  latex_validator.py  postprocess.py  preprocess.py
layout-analysis/: main.py  pyproject.toml
layout-analysis/controller/: extract.py
layout-analysis/scripts/: deploy_to_hf_space.py
layout-analysis/usecase/: __init__.py
tex_translation/: Dockerfile  README.md  dependencies.py  main.py  pyproject.toml
tex_translation/controller/: schemas.py  translate.py
tex_translation/middlewares/: exception_handler.py
tex_translation/usecase/: __init__.py  translate_arxiv_paper.py
(+286 files in other folders)
