[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "anthropic[vertex]>=0.57.1",
    "arxiv>=2.2.0",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.14",
    "feedparser>=6.0.11",
    "google-genai>=1.24.0",
    "mistralai>=1.9.2",
    "pdf2image>=1.17.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.13.1",
    "pylatex>=1.4.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "sentry-sdk[fastapi]>=2.32.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "sqlmodel>=0.0.24",
    "sse-starlette>=2.4.1",
    "supabase>=2.16.0",
    "types-requests>=2.32.4.20250611",
    "uvicorn>=0.35.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "uuid6>=2025.0.1",
    "qdrant-client>=1.17.1",
    "PyJWT>=2.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.14.8",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.mypy]
python_version = "3.13"
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["uuid6", "uuid6.*"]
ignore_missing_imports = true
