[project]
name = "tex_translation"
version = "0.1.0"
description = "ArXiv LaTeX translation + compilation microservice (TeX Live + LLM)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "fastapi>=0.115.14",
    "httpx>=0.28.0",
    "mistralai>=1.9.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tenacity>=9.0.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.14.8",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250611",
]

[tool.mypy]
python_version = "3.13"

[[tool.mypy.overrides]]
module = ["arxiv", "arxiv.*"]
ignore_missing_imports = true
